<resources>

    <string name="facebook_app_id">312550385892011</string>
    <string name="kakao_app_key">849c482c6f3508287bc073fd85e9ba82</string>

    <string name="app_name" translatable="false">모두의 산책</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <string name="internet_connection_faild" translatable="false">인터넷이 연결되어 있지 않습니다.</string>

    <string name="login" translatable="false">로그인</string>
    <string name="nickname_hint" translatable="false">닉네임 입력(10글자)</string>
    <string name="email_hint" translatable="false">이메일 입력</string>
    <string name="password_hint" translatable="false">비밀번호 입력(대소문자 8글자 이상, 숫자 및 특수문자 포함)</string>
    <string name="confirm_password_hint" translatable="false">비밀번호 확인</string>
    <string name="stroll_start_time" translatable="false">산책 시작 예정 시간</string>
    <string name="stroll_end_time" translatable="false">산책 종료 예정 시간</string>
    <string name="stroll_time_hint" translatable="false">자동 산책 모드 체크 후 시간을 입력하시면 집 밖으로 외출 시 선택한 산책 거리를 벗어나면 자동으로 산책모드가 실행됩니다.</string>
    <string name="stroll_distance_hint" translatable="false">집에서 선택한 반경을 기준으로 외출 시 알림을 받습니다.</string>

    <string name="address_hint" translatable="false">집 주소(선택, 지번까지만 입력)</string>
    <string name="find_address" translatable="false">집 주소 찾기</string>
    <string name="input_address" translatable="false">주소 입력</string>
    <string name="optinal_input" translatable="false">선택 항목</string>

    <string name="find_id" translatable="false">아이디 찾기</string>
    <string name="find_password" translatable="false">패스워드 찾기</string>
    <string name="sign_up" translatable="false">회원 가입</string>
    <string name="sign_up_with_sns" translatable="false">SNS계정 회원 가입</string>
    <string name="check_duplication" translatable="false">중복확인</string>
    <string name="next" translatable="false">다음 ></string>
    <string name="find" translatable="false">찾기</string>
    <string name="complete" translatable="false">완료</string>

    <string name="email_error" translatable="false">올바른 이메일 형식이 아닙니다.</string>
    <string name="password_error" translatable="false">잘못된 패스워드 형식 입니다.</string>
    <string name="password_compare_error" translatable="false">패스워드가 일치하지 않습니다.</string>
    <string name="require_check_email" translatable="false">이메일 중복확인을 먼저 해주세요.</string>
    <string name="require_check_nickname" translatable="false">닉네임 중복확인을 먼저 해주세요.</string>

    <string name="empty_email" translatable="false">이메일을 입력해 주세요.</string>
    <string name="available_id" translatable="false">사용 가능한 아이디 입니다.</string>
    <string name="unavailable_id" translatable="false">해당 이메일이 이미 있습니다.\n다른 이메일을 사용해 주세요.</string>
    <string name="empty_nickname" translatable="false">닉네임을 입력해 주세요.</string>
    <string name="unavailable_nicknme" translatable="false">해당 닉네임이 이미 있습니다.\n다른 닉네임을 사용해 주세요.</string>
    <string name="available_nickname" translatable="false">사용 가능한 닉네임 입니다.</string>

    <string name="input_pet_info" translatable="false">반려동물 정보를 입력해주세요</string>
    <string name="name" translatable="false">이름</string>
    <string name="pet_name_hint" translatable="false">반려동물 이름</string>
    <string name="birthday" translatable="false">생년월일</string>
    <string name="pet_species" translatable="false">반려동물 종류</string>
    <string name="pet_relation" translatable="false">반려동물과의 관계</string>
    <string name="pet_input_info_description" translatable="false">반려동물의 입력 정보는 해당 앱에서 생활패턴 제안이나 알림용으로만 사용됩니다.</string>
    <string name="mem_address_input_info_description" translatable="false">주소 입력 정보는 해당 앱에서 생활패턴 제안이나 알림용으로만 사용됩니다. 미 입력시 자동 산책 모드가 비활성화 됩니다</string>

    <string name="year" translatable="false">년</string>
    <string name="month" translatable="false">월</string>
    <string name="day" translatable="false">일</string>

    <string name="walking_report" translatable="false">산책 리포트</string>
    <string name="share_member" translatable="false">산책중인 회원</string>
    <string name="people_who_walking" translatable="false">산책중인 사람들</string>
    <string name="setting" translatable="false">설정</string>
    <string name="loginInfo" translatable="false">로그인 정보</string>
    <string name="login_guide" translatable="false">로그인 해주세요</string>
    <string name="need_login" translatable="false">로그인이 필요합니다.</string>
    <string name="auto_login" translatable="false">자동 로그인</string>
    <string name="auto_stroll" translatable="false">자동 산책 모드</string>
    <string name="auto_stroll_time" translatable="false">자동 산책 설정</string>
    <string name="auto_stroll_distance" translatable="false">자동 산책 거리</string>
    <string name="nick_name" translatable="false">닉네임</string>
    <string name="walking_coin" translatable="false">산책 코인</string>

    <string name="logout" translatable="false">로그아웃</string>
    <string name="change_password" translatable="false">비밀번호 변경</string>
    <string name="change_user_info" translatable="false">사용자 정보 변경</string>
    <string name="change_pet_info" translatable="false">반려동물 정보 변경</string>
    <string name="quit_service" translatable="false">서비스 탈퇴</string>

    <string name="notification_setting" translatable="false">알림 설정</string>
    <string name="notification_accept" translatable="false">알림 받기</string>
    <string name="suggest_geofence_notification" translatable="false">생활패턴 알림 제안</string>

    <string name="walking_setting" translatable="false">산책 설정</string>
    <string name="my_location_accept" translatable="false">산책 중 내 위치 보이기</string>
    <string name="chatting_accept" translatable="false">산책 중 채팅 허용</string>

    <string name="permission_setting" translatable="false">권한 설정</string>
    <string name="permission_infos" translatable="false">위치, 사진등의 권한</string>

    <string name="location_setting" translatable="false">위치 서비스</string>
    <string name="use_location" translatable="false">위치 정보 사용</string>
    <string name="use_geofence" translatable="false">지오펜스 정보 사용</string>

    <string name="version_information" translatable="false">버전 정보</string>
    <string name="current_version" translatable="false">현재 버전</string>
    <string name="latest_version" translatable="false">최신 버전</string>
    <string name="update" translatable="false">업데이트</string>

    <string name="current_password_hint" translatable="false">현재 비밀번호</string>
    <string name="new_password_hint" translatable="false">새 비밀번호(대소문자 8글자 이상, 숫자 및 특수문자 포함)</string>
    <string name="new_password_confirm_hint" translatable="false">새 비밀번호 확인</string>

    <string name="input_password" translatable="false">비밀번호를 입력해 주세요.</string>
    <string name="same_password" translatable="false">현재 비밀번호와 새 비밀번호가 동일합니다.</string>
    <string name="failed_change_password" translatable="false">비밀번호 변경 실패</string>
    <string name="succeed_change_password" translatable="false">비밀번호 변경 성공</string>

    <string name="error_message_for_service_unavailable">서비스 연결상태가 좋지 않습니다.\n\n잠시 후 다시 시도해 주세요.</string>
    <string name="invalid_kakao_member">카카오톡 회원가입이 되지 않았습니다.\n\n카카오톡 회원 가입을 먼저 시도해 주세요.</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>


</resources>
