<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal">

                <include
                    layout="@layout/back_layout" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/change_user_info" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nick_name" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginRight="14dp"
                        android:layout_marginLeft="9dp"
                        android:layout_marginTop="11dp"
                        android:background="#bce1f2" />

                    <EditText
                        android:id="@+id/nickname_text"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="5dp"
                        android:background="#ffffff"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="12dp"
                        android:textSize="14dp"
                        android:hint="@string/nickname_hint"
                        android:gravity="center_vertical"
                        android:onClick="onClickCallback"/>

                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/auto_stroll_time" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginRight="9dp"
                        android:layout_marginLeft="9dp"
                        android:layout_marginTop="11dp"
                        android:background="#bce1f2" />


                    <EditText
                        android:id="@+id/stroll_start_time"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="5dp"
                        android:background="#ffffff"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="14dp"
                        android:editable="false"
                        android:hint="@string/stroll_start_time"
                        android:gravity="center_vertical"
                        android:onClick="onClickCallback"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_marginRight="9dp"
                        android:layout_marginLeft="9dp"
                        android:layout_marginTop="11dp"
                        android:background="#bce1f2" />

                    <EditText
                        android:id="@+id/stroll_end_time"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:paddingLeft="5dp"
                        android:background="#ffffff"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="14dp"
                        android:editable="false"
                        android:hint="@string/stroll_end_time"
                        android:gravity="center_vertical"
                        android:onClick="onClickCallback"/>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="10dp">

                <CheckBox
                    android:id="@+id/auto_stroll_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:checked="false"
                    android:onClick="onClickCallback"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/auto_stroll" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stroll_time_hint"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:textSize="12dp"
                android:gravity="center_horizontal"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:text="@string/auto_stroll_distance" />

                    <TextView
                        android:id="@+id/distance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="right"
                        android:textColor="@color/colorPrimary"
                        />

                </FrameLayout>

                <SeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:max="10"
                    android:min="1"
                    android:progress="1"
                    android:secondaryProgress="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stroll_distance_hint"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="12dp"
                    android:gravity="center_horizontal"
                    android:textStyle="italic" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/input_address" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="11dp"

                    android:background="#bce1f2" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="5dp"
                    android:background="#ffffff"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="14dp"
                    android:editable="false"
                    android:hint="@string/address_hint"
                    android:gravity="center_vertical"
                    android:onClick="onClickCallback"/>

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mem_address_input_info_description"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textSize="12dp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/next_button_selector"
        android:layout_margin="10dp"
        android:text="@string/complete"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="onClickCallback"/>

</LinearLayout>