<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context="com.friendly.walking.activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:typeface="sans"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/login" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/close_selector"
            android:background="@color/colorTransparent"
            android:visibility="gone"
            android:onClick="onClickCallback"/>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="9dp"
            android:background="#bce1f2"
            />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginRight="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="1dp"

            android:background="#bce1f2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:background="#ffffff"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:textSize="14dp"
            android:hint="@string/password_hint"
            android:gravity="center_vertical" />

    </FrameLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="onClickCallback"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/autologin_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="true"
            android:onClick="onClickCallback"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/auto_login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/google_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/google_login"
            android:background="@color/colorTransparent"
            android:onClick="onClickCallback"/>

        <ImageButton
            android:id="@+id/facebook_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/facebook_login"
            android:background="@color/colorTransparent"
            android:layout_marginTop="10dp"
            android:onClick="onClickCallback"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/find_id"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_id"/>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/colorBG"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/find_password"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_password"/>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/colorBG"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_up"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>